--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ ul {
     justify-content: space-around;
     margin-top: 50px;
     gap: 100;
+    
 
 
 }
@@ -128,9 +129,9 @@ ul {
 
 .call-section {
     padding: 60px;
-    height: 300px;
+    height: 180px;
     text-align: left;
-    background-image: url("images/watch.png") , url("./images/gradient1.png");
+    background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0.00) 100%), url('../images/watch.png');
     background-repeat: no-repeat;
 }
 
@@ -146,4 +147,14 @@ ul {
 .btn-call {
     color: #F15B22;
     background: #FFF;
+}
+
+.footer-container{
+    background-color: #151414;
+    color: white;
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-around;
+    padding: 130px 200px ;
+    gap: 330px ;
 }
